# face-access-control

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
notebooks/: 01_Haar_Cascades.py  01_image_recognition_parsing.py  02_face_embeddings.py
notebooks/__marimo__/session/: 01_exploration.py.json  01_image_recognition_parsing.py.json  02_face_embeddings.py.json
scripts/: README.md
